fix: Commit 3 - Fully fix java:S112, java:S106, java:S1874, java:S1643
Commit 3 of SonarQube suggestions

Fully fixed issues:
- [java:S112] AZ6SH_xkKiggci1pcvYC: Replace generic exceptions with specific library exceptions or a custom exception.
- [java:S106] AZ6SH_xkKiggci1pcvYF: Replace this use of System.out by a logger.
- [java:S1874] AZ7aqUBLHr3Ux-A8gvHR: Remove this use of "URL"; it is deprecated.
- [java:S1643] AZ6SH_xkKiggci1pcvYD: Use a StringBuilder instead.

Generated by SonarQube Agent